[gd_scene load_steps=12 format=2]

[ext_resource path="res://common/assets/2d/Enemy_Bird.png" type="Texture" id=1]
[ext_resource path="res://entities/Ennemy/BIRD ENEMY/bird enemy.gd" type="Script" id=2]
[ext_resource path="res://entities/Hitbox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/Hurtbox/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/Ennemy/BIRD ENEMY/projectilelauncher.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=7]
radius = 48.3735

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 33, 32 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 363.25, 314.25 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "bird anim"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="bird" type="KinematicBody2D"]
position = Vector2( 200, 500 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
speeeeed = 6000

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 2
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -32, 0 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 8 )

[node name="IFrameTimer" type="Timer" parent="."]

[node name="player detection" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="player detection"]
position = Vector2( 456, 96 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player detection"]
position = Vector2( -440, 96 )
shape = SubResource( 9 )

[node name="change dir" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="projectilelauncher" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="time between bullets" type="Timer" parent="."]
wait_time = 6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
"anims/bird anim" = SubResource( 11 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="player detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player detection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="change dir" to="." method="_on_change_dir_timeout"]
[connection signal="timeout" from="time between bullets" to="." method="_on_time_between_bullets_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
